# torch-cuda-installer

./: README.md  pyproject.toml  update_version.py
tests/: test_installer.py
torch_cuda_installer/: __init__.py  installer.py
